--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,13 @@
         "php": ">=5.3.0",
         "ext-imagick": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8",
+        "squizlabs/php_codesniffer": "^2.6"
+    },
     "autoload": {
-        "psr-0": {
-            "DiffImg": "src/"
+        "psr-4": {
+            "DiffImg\\": "src/"
         }
     }
 }
