--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ before_script:
   - composer install
 script:
   - vendor/bin/phpunit
+after_success:
+  - travis_retry php vendor/bin/coveralls -v
